--- a/site.html
+++ b/site.html
@@ -4,11 +4,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Site teste</title>
-      <link rel="stylesheet" href="/assets/style/style.css">
-      <img src="/assets/img/thx.jpg" alt="" id="img231322">
+      <link rel="stylesheet" href="assets/style/style.css">
+      <img src="assets/img/thx.jpg" alt="" id="img231322">
 </head>
 <body>
-      <a href="/index.html" id="img222222">
+      <a href="index.html" id="img222222">
             VOLTAR
       </a>
      
