--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                     QUIZES/HACKATOON
                               </button>
                         </a>
-                        <a href="/site.html">
+                        <a href="site.html">
                               <button id="site">
                                     SITE TESTE
                               </button>
